<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
                      http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>de.holisticon.jdk9showcase</groupId>
    <artifactId>jdk9-jigsaw-http2</artifactId>
    <version>1.0</version>

    <properties>
        <java.version>9</java.version>
        <java.9.executable>
            /Library/Java/JavaVirtualMachines/jdk-9_153.jdk/Contents/Home/bin/java
        </java.9.executable>
        <additionalRuntimeArgLine>
            --add-modules=java.xml.bind,jdk.incubator.httpclient,java.base
        </additionalRuntimeArgLine>
        <!-- @formatter:off -->
        <java.logging.format><![CDATA[
            -Djava.util.logging.SimpleFormatter.format=%1$tY-%1$tm-%1$td %1$tH:%1$tM:%1$tS || %5$s %6$s%n]]>
        </java.logging.format>
        <!-- @formatter:on -->
        <!--
       <java.logging.format>-Djava.util.logging.SimpleFormatter.format=%1$tY-%1$tm-%1$td %1$tH:%1$tM:%1$tS %4$s %2$s %5$s%6$s%n</java.logging.format>
         -->
    </properties>
    <profiles>
        <profile>
            <id>ResponseAsyncExample</id>
            <activation>
                <!-- Java 9 doesn't identify itself as "1.9" but "9" -->
                <jdk>9</jdk>
            </activation>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.codehaus.mojo</groupId>
                        <artifactId>exec-maven-plugin</artifactId>
                        <version>1.5.0</version>
                        <executions>
                            <execution>
                                <goals>
                                    <goal>exec</goal>
                                </goals>
                            </execution>
                        </executions>
                        <configuration>
                            <executable>${java.9.executable}</executable>
                            <arguments>
                                <argument>-Xmx2048m</argument>
                                <argument>${java.logging.format}</argument>
                                <argument>-classpath</argument>
                                <classpath/>
                                <argument>${additionalRuntimeArgLine}</argument>
                                <argument>
                                    de.holisticon.jdk9showcase.http2client.ResponseAsyncExample
                                </argument>
                            </arguments>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>

        <profile>
            <id>ResponseAsyncCompare</id>
            <activation>
                <!-- Java 9 doesn't identify itself as "1.9" but "9" -->
                <jdk>9</jdk>
            </activation>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.codehaus.mojo</groupId>
                        <artifactId>exec-maven-plugin</artifactId>
                        <version>1.5.0</version>
                        <executions>
                            <execution>
                                <goals>
                                    <goal>exec</goal>
                                </goals>
                            </execution>
                        </executions>
                        <configuration>
                            <executable>${java.9.executable}</executable>
                            <arguments>
                                <argument>-Xmx4096m</argument>
                                <argument>${java.logging.format}</argument>
                                <argument>-classpath</argument>
                                <classpath/>
                                <argument>${additionalRuntimeArgLine}</argument>
                                <argument>
                                    de.holisticon.jdk9showcase.http2client.ResponseAsyncCompare
                                </argument>
                                <argument>${httpVersion}</argument>
                                <argument>${numberOfRequests}</argument>
                            </arguments>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
        <profile>
            <id>ResponseAsyncMultiExample</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.codehaus.mojo</groupId>
                        <artifactId>exec-maven-plugin</artifactId>
                        <version>1.5.0</version>
                        <executions>
                            <execution>
                                <goals>
                                    <goal>exec</goal>
                                </goals>
                            </execution>
                        </executions>
                        <configuration>
                            <executable>${java.9.executable}</executable>
                            <arguments>
                                <argument>${java.logging.format}</argument>
                                <argument>-classpath</argument>
                                <classpath/>
                                <argument>${additionalRuntimeArgLine}</argument>
                                <argument>
                                    de.holisticon.jdk9showcase.http2client.ResponseAsyncMultiExample
                                </argument>
                            </arguments>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
        <profile>
            <id>CancelClientExample</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.codehaus.mojo</groupId>
                        <artifactId>exec-maven-plugin</artifactId>
                        <version>1.5.0</version>
                        <executions>
                            <execution>
                                <goals>
                                    <goal>exec</goal>
                                </goals>
                            </execution>
                        </executions>
                        <configuration>
                            <executable>${java.9.executable}</executable>
                            <arguments>
                                <argument>${java.logging.format}</argument>
                                <argument>-classpath</argument>
                                <classpath/>
                                <argument>${additionalRuntimeArgLine}</argument>
                                <argument>
                                    de.holisticon.jdk9showcase.http2client.CancelClientExample
                                </argument>
                            </arguments>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-toolchains-plugin</artifactId>
                <version>1.1</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>toolchain</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <toolchains>
                        <jdk>
                            <version>1.9</version>
                        </jdk>
                    </toolchains>
                </configuration>
            </plugin>
            <!-- -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.6.1</version>
                <configuration>
                    <verbose>true</verbose>
                    <fork>true</fork>
                    <source>9</source>
                    <target>9</target>
                    <jdkToolchain>
                        <version>9</version>
                    </jdkToolchain>
                    <release>9</release>
                    <compilerArgs>
                        <arg>-verbose</arg>

                    </compilerArgs>
                </configuration>
            </plugin>
            <plugin>
                <artifactId>maven-clean-plugin</artifactId>
                <version>3.0.0</version>
                <configuration>
                    <filesets>
                        <fileset>
                            <directory>${basedir}/downloads/ResponseAsync
                            </directory>
                            <includes>
                                <include>**/*.*</include>
                            </includes>
                            <excludes>
                                <eclude>
                                    info.md
                                </eclude>
                            </excludes>
                            <followSymlinks>false</followSymlinks>
                        </fileset>
                        <fileset>
                            <directory>${basedir}/downloads/ResponseAsyncMulti
                            </directory>
                            <includes>
                                <include>**/*.*</include>
                            </includes>
                            <excludes>
                                <eclude>
                                    info.md
                                </eclude>
                            </excludes>
                            <followSymlinks>false</followSymlinks>
                        </fileset>
                    </filesets>
                </configuration>
            </plugin>
        </plugins>
    </build>
    <dependencies>
    </dependencies>
    <pluginRepositories>
        <pluginRepository>
            <id>apache.snapshots</id>
            <url>http://repository.apache.org/snapshots/</url>
        </pluginRepository>
    </pluginRepositories>
</project>